grammar and spelling check 2

--- a/index.html
+++ b/index.html
@@ -80,12 +80,11 @@
         </div>
 
         <section id="projects" class="py-20">
-            <!-- Existing project section -->
             <div class="bg-gray-900 p-6 rounded-lg shadow-lg bg-opacity-85 my-5">
                 <h3 class="text-xl font-bold mb-2">Knowkee (mobile app)</h3>
                 <h4 class="text-gray-300">
                     A digital wallet for you to store and share your life achievements, available on the Play Store and
-                    App Store.
+                    App Store
                     <h4>
                         <div class="dropdown inline-block mt-4">
                             <div id="knowkee-dropdown" class="dropdown-content hidden text-gray-300 mt-2">
@@ -167,12 +166,10 @@
                             </button>
                         </div>
             </div>
-            <!-- End of modified project block -->
-            <!-- Existing project section -->
             <div class="bg-gray-900 p-6 rounded-lg shadow-lg bg-opacity-85 my-5">
                 <h3 class="text-xl font-bold mb-2">SmartPass</h3>
                 <p class="text-gray-300">
-                    A user authentication API now being offered commercially as SaaS.
+                    A user authentication API now being offered commercially as SaaS
                 </p>
                 <div class="dropdown inline-block mt-4">
                     <div id="smartpass-dropdown" class="dropdown-content hidden text-gray-300 mt-2">
@@ -297,14 +294,13 @@
             <div class="bg-gray-900 p-6 rounded-lg shadow-lg bg-opacity-85 my-5">
                 <h3 class="text-xl font-bold mb-2">KME360</h3>
                 <p class="text-gray-300">
-                    A Learning Management Experience Saas Web App
+                    A Learning Management Experience Saas Web App commercially used by major companies
                 </p>
                 <div class="dropdown inline-block mt-4">
                     <div id="kme-dropdown" class="dropdown-content hidden text-gray-300 mt-2">
                         <!-- Add detailed project information here -->
                         <strong>My Role:</strong> Backend. I resolved support tickets and created new features for a
-                        Sass
-                        LMS monolithic web application.<br>
+                        Sass LMS monolithic architected web application.<br>
                         <br>
                         <strong>The Tech Stack:</strong> In this tech stack, Python and Django form the backbone for
                         server-side logic and web development, while PostgreSQL is employed as the relational database
