--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@
                     <h4>
                         <div class="dropdown inline-block mt-4">
                             <div id="knowkee-dropdown" class="dropdown-content hidden text-gray-300 mt-2">
-                                <!-- Add detailed project information here -->
                                 <p class="pb-5"><strong>My Role:</strong> Backend. I collaborated in the
                                     creation, from scratch, of this
                                     application available on the Play Store and App Store. Throughout the entire
@@ -294,7 +293,7 @@
             <div class="bg-gray-900 p-6 rounded-lg shadow-lg bg-opacity-85 my-5">
                 <h3 class="text-xl font-bold mb-2">KME360</h3>
                 <p class="text-gray-300">
-                    A Learning Management Experience Saas Web App commercially used by major companies
+                    A Learning Management Experience Saas Web App commercially used by big companies
                 </p>
                 <div class="dropdown inline-block mt-4">
                     <div id="kme-dropdown" class="dropdown-content hidden text-gray-300 mt-2">
