--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     <div id="smartpass-dropdown" class="dropdown-content hidden text-gray-300 mt-2">
                         <!-- Add detailed project information here -->
                         <p><strong>My Role:</strong> Backend. I tackled (under the supervision of the lead
-                            developer and CTO) the creation of this user authentication microservice from scratch. 
+                            developer and CTO) the creation of this user authentication microservice from scratch.
                             Throughout the entire development lifecycle of the service, I participated as a backend
                             developer.<br>
                             <br>
@@ -233,7 +233,8 @@
                         <!-- Add detailed project information here -->
                         <strong>My Role:</strong> Backend. I handled (under the supervision of the lead
                         developer and CTO) the implementation of this email event data streaming ETL pipeline.
-                        Throughout the coding, testing, deployment and maintenance of the system, I participated as a backend
+                        Throughout the coding, testing, deployment and maintenance of the system, I participated as a
+                        backend
                         developer.<br>
                         <br>
                         <strong>The Tech Stack:</strong> This tech stack is centered around Node.js for server-side
@@ -272,7 +273,8 @@
                         email event tracking system. This system needed to
                         accurately capture, monitor, and log various email-related events, including, but not limited
                         to, emails being sent, opened, and bounced. Furthermore, it required the extraction, processing,
-                        and loading (ETL) of this data into a format that is conducive to analysis and could subsequently
+                        and loading (ETL) of this data into a format that is conducive to analysis and could
+                        subsequently
                         be leveraged to derive actionable insights for the marketing department, thereby facilitating
                         data-driven decision-making and enhancing marketing strategies.<br>
                         <br>
@@ -357,6 +359,13 @@
                         class="flex items-center no-underline hover:underline">
                         <img src="X_logo_2023_original.png" alt="Twitter Icon" class="w-6 h-6 mr-2 text-green-500">
                         Twitter
+                    </a>
+                </div>
+                <div class="profile-link">
+                    <a href="mailto:camilo.chaves.h@gmail.com" target="_blank"
+                        class="flex items-center no-underline hover:underline">
+                        <img src="at.png" alt="Email Icon" class="w-6 h-6 mr-2 text-green-500">
+                        Email Me
                     </a>
                 </div>
             </div>
