--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             padding: 0;
             background-color: rgba(0, 0, 0, 1);
             overflow: scroll;
+            scroll-behavior:smooth;
         }
 
         canvas {
