--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             padding: 0;
             background-color: rgba(0, 0, 0, 1);
             overflow: scroll;
-            scroll-behavior:smooth;
+            scroll-behavior: smooth;
         }
 
         canvas {
@@ -160,9 +160,9 @@
                                     <br>
                                 </p>
                             </div>
-                            <button onclick="toggleDropdown('knowkee')"
+                            <button id="knowkeeId" onclick="toggleDropdown('knowkee')"
                                 class="bg-green-600 hover:bg-green-700 transition-colors text-white py-2 px-4 rounded">
-                                Details
+                                Show Details
                             </button>
                         </div>
             </div>
@@ -218,9 +218,9 @@
                             <br>
                         </p>
                     </div>
-                    <button onclick="toggleDropdown('smartpass')"
+                    <button id="smartpassId" onclick="toggleDropdown('smartpass')"
                         class="bg-green-600 hover:bg-green-700 transition-colors text-white py-2 px-4 rounded">
-                        Details
+                        Show Details
                     </button>
                 </div>
             </div>
@@ -287,9 +287,9 @@
                         <br>
                         </p>
                     </div>
-                    <button onclick="toggleDropdown('email')"
+                    <button id="emailId" onclick="toggleDropdown('email')"
                         class="bg-green-600 hover:bg-green-700 transition-colors text-white py-2 px-4 rounded">
-                        Details
+                        Show Details
                     </button>
                 </div>
             </div>
@@ -329,9 +329,9 @@
                         <br>
                         </p>
                     </div>
-                    <button onclick="toggleDropdown('kme')"
+                    <button id="kmeId" onclick="toggleDropdown('kme')"
                         class="bg-green-600 hover:bg-green-700 transition-colors text-white py-2 px-4 rounded">
-                        Details
+                        Show Details
                     </button>
                 </div>
             </div>
@@ -439,10 +439,16 @@
         };
         function toggleDropdown(projectId) {
             var dropdown = document.getElementById(projectId + '-dropdown');
+            var button = document.getElementById(projectId + 'Id');
+            if (button.innerText === 'Show Details'){
+                button.innerText = 'Hide Details'
+            }
+            else {
+                button.innerText = "Show Details"
+            }
             dropdown.classList.toggle("hidden");
         };
     </script>
-
 </body>
 
 </html>
