--- a/index.html
+++ b/index.html
@@ -340,29 +340,29 @@
         <section id="connect">
             <h4 class="text-3xl mb-8 text-center">Connect with Me</h4>
 
-            <div class="flex justify-center space-x-4">
-                <div class="profile-link">
+            <div class="flex flex-wrap justify-center space-x-4">
+                <div class="profile-link p-2">
                     <a href="http://www.linkedin.com/in/camilochavesdeveloper" target="_blank"
                         class="flex items-center no-underline hover:underline">
                         <img src="LI-In-Bug-green.png" alt="LinkedIn Icon" class="w-6 h-6 mr-2 text-green-500">
                         LinkedIn
                     </a>
                 </div>
-                <div class="profile-link">
+                <div class="profile-link p-2">
                     <a href="https://github.com/camichaves79" target="_blank"
                         class="flex items-center no-underline hover:underline">
                         <img src="github-mark-green.png" alt="GitHub Icon" class="w-6 h-6 mr-2 text-green-500">
                         GitHub
                     </a>
                 </div>
-                <div class="profile-link">
+                <div class="profile-link p-2">
                     <a href="https://x.com/CamiloChavesH79" target="_blank"
                         class="flex items-center no-underline hover:underline">
                         <img src="X_logo_2023_original.png" alt="Twitter Icon" class="w-6 h-6 mr-2 text-green-500">
                         Twitter
                     </a>
                 </div>
-                <div class="profile-link">
+                <div class="profile-link p-2">
                     <a href="mailto:camilo.chaves.h@gmail.com" target="_blank"
                         class="flex items-center no-underline hover:underline">
                         <img src="at.png" alt="Email Icon" class="w-6 h-6 mr-2 text-green-500">
