improved connect with me section

--- a/index.html
+++ b/index.html
@@ -343,9 +343,9 @@
 
         </section>
         <section id="connect">
-            <h4 class="text-3xl mb-8 text-center">Connect with Me</h4>
+            <h1 class="text-3xl font-bold mb-2 text-center">Connect with Me</h1>
 
-            <div class="flex flex-wrap justify-around space-x-4">
+            <div class="flex flex-wrap justify-evenly space-x-4">
                 <div class="profile-link p-2">
                     <a href="http://www.linkedin.com/in/camilochavesdeveloper" target="_blank"
                         class="flex items-center no-underline hover:underline">
