secured blank taget open href a

--- a/index.html
+++ b/index.html
@@ -347,28 +347,28 @@
 
             <div class="flex flex-wrap justify-evenly space-x-4">
                 <div class="profile-link p-2">
-                    <a href="http://www.linkedin.com/in/camilochavesdeveloper" target="_blank"
+                    <a href="http://www.linkedin.com/in/camilochavesdeveloper" target="_blank" rel="noopener noreferrer"
                         class="flex items-center no-underline hover:underline">
                         <img src="LI-In-Bug-green.png" alt="LinkedIn Icon" class="w-6 h-6 mr-2 text-green-500">
                         <pre>LinkedIn</pre>
                     </a>
                 </div>
                 <div class="profile-link p-2 justify-start">
-                    <a href="https://github.com/camichaves79" target="_blank"
+                    <a href="https://github.com/camichaves79" target="_blank" rel="noopener noreferrer"
                         class="flex items-center no-underline hover:underline">
                         <img src="github-mark-green.png" alt="GitHub Icon" class="w-6 h-6 mr-2 text-green-500">
                         <pre>GitHub</pre>
                     </a>
                 </div>
                 <div class="profile-link p-2">
-                    <a href="https://x.com/CamiloChavesH79" target="_blank"
+                    <a href="https://x.com/CamiloChavesH79" target="_blank" rel="noopener noreferrer"
                         class="flex items-center no-underline hover:underline">
                         <img src="X_logo_2023_original.png" alt="Twitter Icon" class="w-6 h-6 mr-2 text-green-500">
                         <pre>Twitter</pre>
                     </a>
                 </div>
                 <div class="profile-link p-2">
-                    <a href="mailto:camilo.chaves.h@gmail.com" target="_blank"
+                    <a href="mailto:camilo.chaves.h@gmail.com" target="_blank" rel="noopener noreferrer"
                         class="flex items-center no-underline hover:underline">
                         <img src="at.png" alt="Email Icon" class="w-6 h-6 mr-2 text-green-500">
                         <pre>Email Me</pre>
