added padding to connect section

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
             </div>
 
         </section>
-        <section id="connect">
+        <section id="connect" class="py-20">
             <pre><h1 class="text-3xl font-bold mb-2 text-center">Connect with me!</h1></pre>
 
             <div class="flex flex-wrap justify-center space-x-4">
