--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <h4>
                             <div class="dropdown inline-block mt-4">
                                 <div id="knowkee-dropdown" class="dropdown-content hidden text-gray-300 mt-2">
-                                    <p class="pb-5"><strong>My Role:</strong> Backend. I collaborated in the
+                                    <p class="pb-5"><strong>My Role</strong> <br>Backend. I collaborated in the
                                         creation, from scratch, of this
                                         application available on the Play Store and App Store. Throughout the entire
                                         development
