--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
                                 <div id="knowkee-dropdown" class="dropdown-content hidden text-gray-300 mt-2">
                                     <p class="pb-5"><strong>My Role</strong> <br>Backend. I collaborated in the
                                         creation, from scratch, of this
-                                        application available on the Play Store and App Store. Throughout the entire
+                                        application available on the Play Store and App Store. <br>Throughout the entire
                                         development
                                         lifecycle of the application, I participated mainlly in the backend development,
                                         and
                                         in an integration of a third party's APK with our mobile app code. <br>
                                         <br>
-                                        <strong>The Tech Stack:</strong> In this modern tech stack, Python served as the
+                                        <strong>The Tech Stack</strong> <br>In this modern tech stack, Python served as the
                                         backend
                                         language, orchestrating the interaction between various services. DocumentDB and
                                         DynamoDB
@@ -83,14 +83,14 @@
                                         system's capabilities, creating a robust, scalable, and versatile technological
                                         ecosystem.<br>
                                         <br>
-                                        <strong>The team:</strong> For this project the team was conformed by 2 backend
+                                        <strong>The team</strong><br> For this project the team was conformed by 2 backend
                                         developers,
                                         2 frontend developers, a lead developer, and a product owner (CTO). As well as
                                         the
                                         support
                                         from an international business partner's team in the use of their API. <br>
                                         <br>
-                                        <strong>The Problem:</strong> The challenge in developing this mobile app lies
+                                        <strong>The Problem</strong><br> The challenge in developing this mobile app lies
                                         in
                                         designing and implementing a
                                         functional digital wallet system. This system should enable users to securely
@@ -103,7 +103,7 @@
                                         sharing of diverse personal accomplishments within a secure digital
                                         environment.<br>
                                         <br>
-                                        <strong>The Solution: </strong>
+                                        <strong>The Solution </strong><br>
                                         To address the specified problem, as it pertains to th backend, a comprehensive
                                         solution was implemented, centered
                                         around a REST API designed to manage the creation, reception, storage, and
@@ -152,12 +152,12 @@
                     <div class="dropdown inline-block mt-4">
                         <div id="smartpass-dropdown" class="dropdown-content hidden text-gray-300 mt-2">
                             <!-- Add detailed project information here -->
-                            <p><strong>My Role:</strong> Backend. I tackled (under the supervision of the lead
+                            <p><strong>My Role</strong><br> Backend. I tackled (under the supervision of the lead
                                 developer and CTO) the creation of this user authentication microservice from scratch.
                                 Throughout the entire development lifecycle of the service, I participated as a backend
                                 developer.<br>
                                 <br>
-                                <strong>The Tech Stack:</strong> Leveraging Python for server-side logic, this tech
+                                <strong>The Tech Stack</strong> <br>Leveraging Python for server-side logic, this tech
                                 stack
                                 utilizes boto3 for AWS service interaction, enabling seamless integration with AWS
                                 resources. Amazon API Gateway orchestrates REST APIs, while AWS Lambda supports
@@ -175,11 +175,11 @@
                                 and
                                 resources orchestration.<br>
                                 <br>
-                                <strong>The team:</strong> For this project the team was conformed by 1 backend
+                                <strong>The team</strong> <br>For this project the team was conformed by 1 backend
                                 developer,
                                 a lead developer, and a product owner (CTO). <br>
                                 <br>
-                                <strong>The Problem:</strong> The challenge involved designing and implementing a highly
+                                <strong>The Problem</strong> <br>The challenge involved designing and implementing a highly
                                 modular and scalable microservice dedicated to managing user authentication, which could
                                 be
                                 seamlessly integrated with diverse applications requiring minimal effort. This
@@ -188,7 +188,7 @@
                                 secure
                                 authentication mechanism across multiple mobile as well as web applications.<br>
                                 <br>
-                                <strong>The Solution: </strong>
+                                <strong>The Solution</strong><br>
                                 The solution to the identified problem involved the development of a secure REST API,
                                 leveraging the serverless architecture of AWS Lambda and API Gateway. This approach
                                 facilitated scalability and simplified maintenance. At the heart of the user
@@ -226,14 +226,14 @@
                     <div class="dropdown inline-block mt-4">
                         <div id="email-dropdown" class="dropdown-content hidden text-gray-300 mt-2">
                             <!-- Add detailed project information here -->
-                            <strong>My Role:</strong> Backend. I handled (under the supervision of the lead
+                            <strong>My Role</strong> <br>Backend. I handled (under the supervision of the lead
                             developer and CTO) the implementation of this email event data streaming ETL pipeline.
                             Throughout the coding, testing, deployment and maintenance of the system, I participated as
                             a
                             backend
                             developer.<br>
                             <br>
-                            <strong>The Tech Stack:</strong> This tech stack is centered around Node.js for server-side
+                            <strong>The Tech Stack</strong> <br>This tech stack is centered around Node.js for server-side
                             logic, emphasizing asynchronous operations and scalability for web applications. AWS Lambda
                             is
                             specifically used for processing data received through SES (Simple Email Service), handling
@@ -269,11 +269,11 @@
                             demonstrating a cohesive flow of data processing and analysis within the AWS cloud
                             environment.<br>
                             <br>
-                            <strong>The team:</strong> For this project the team was conformed by 1 backend
+                            <strong>The team</strong> <br>For this project the team was conformed by 1 backend
                             developer,
                             a lead developer, and a product owner (the CTO). <br>
                             <br>
-                            <strong>The Problem:</strong> The challenge involved designing and implementing a
+                            <strong>The Problem</strong><br> The challenge involved designing and implementing a
                             comprehensive
                             email event tracking system. This system needed to
                             accurately capture, monitor, and log various email-related events, including, but not
@@ -286,7 +286,7 @@
                             facilitating
                             data-driven decision-making and enhancing marketing strategies.<br>
                             <br>
-                            <strong>The Solution: </strong>
+                            <strong>The Solution</strong><br>
                             The solution was to develop a streamlined pipeline that captures Simple Email Service (SES)
                             events in real-time, extracts this data on the fly, and transforms and loads it as needed.
                             This
@@ -311,10 +311,10 @@
                     <div class="dropdown inline-block mt-4">
                         <div id="kme-dropdown" class="dropdown-content hidden text-gray-300 mt-2">
                             <!-- Add detailed project information here -->
-                            <strong>My Role:</strong> Backend. I resolved support tickets and created new features for a
+                            <strong>My Role</strong> <br>Backend. I resolved support tickets and created new features for a
                             Sass LMS monolithic architected web application.<br>
                             <br>
-                            <strong>The Tech Stack:</strong> In this tech stack, Python and Django form the backbone for
+                            <strong>The Tech Stack</strong> <br>In this tech stack, Python and Django form the backbone for
                             server-side logic and web development, while PostgreSQL is employed as the relational
                             database
                             for efficient data storage. AWS Cloud9 serves as the integrated development environment,
@@ -328,17 +328,17 @@
                             provides a
                             robust foundation for building scalable, secure, and feature-rich web applications. <br>
                             <br>
-                            <strong>The team:</strong> For this project the team was conformed by 3 backend
+                            <strong>The team</strong><br> For this project the team was conformed by 3 backend
                             developers, 3 frontend developers,
                             and a lead developer. <br>
                             <br>
-                            <strong>The Problem:</strong> Providing assistance and implementing additional
+                            <strong>The Problem</strong><br> Providing assistance and implementing additional
                             functionalities
                             during the maintenance phase of this robust Learning Management Experience Software as a
                             Service
                             (SaaS) application posed a challenge.<br>
                             <br>
-                            <strong>The Solution: </strong>
+                            <strong>The Solution</strong><br>
                             The solution involved addressing each challenge through a systematic approach: comprehending
                             the problem, collecting requirements, designing a solution, coding, testing, and
                             deploying—all
